Update dependencies, change warning about 1.17 + watson
Adding --illegal-access=permit to start args fixes the issue, for now. I would really prefer if the IBM devs fix the issue though, as this is only a temp solution...